--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
@@ -59,6 +60,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
+    "next-sitemap": "^4.2.3",
     "next-themes": "latest",
     "react": "^19",
     "react-day-picker": "latest",
