--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-native": "latest",
     "react-resizable-panels": "latest",
     "recharts": "latest",
+    "resend": "^4.7.0",
     "sonner": "latest",
     "stripe": "^18.3.0",
     "tailwind-merge": "^2.5.5",
