--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@stripe/stripe-js": "^7.4.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@xenova/transformers": "^2.17.2",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
