--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "next-sitemap": "^4.2.3",
     "next-themes": "latest",
     "react": "^19",
-    "react-day-picker": "latest",
+    "react-day-picker": "^9.0.0",
     "react-dom": "^19",
     "react-hook-form": "latest",
     "react-icons": "latest",
@@ -78,10 +78,11 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "three": "latest",
-    "vaul": "latest",
+    "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
